changed some content

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,29 +13,31 @@
 </head>
 
 <body>
-    <nav class="navbar">
+        <nav class="navbar">
         <div class="logo">
             <img src="../images/Swin_security.webp" alt="Swin Security" height="60">
         </div>
 
         <ul class="nav-links">
             <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="./about.html"><i class="fas fa-info-circle"></i> About</a></li>
+            <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-shield-alt"></i> Services <i
+                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
                         class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="./aisurveillance.html"><i class="fas fa-camera"></i> AI Surveillance</a></li>
-                    <!-- <li><a href="/pages/cybersecurity.html"><i class="fas fa-lock"></i> Cyber Security</a></li> -->
-                    <li><a href="./smarthome.html"><i class="fas fa-home"></i> Smart Home</a></li>
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                    <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
+                    <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
+                    <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
+                    <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
                 </ul>
             </li>
-            <!-- <li><a href="#"><i class="fas fa-images"></i> Gallery</a></li> -->
             <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
 
         <i class="fas fa-bars hamburger"></i>
     </nav>
+
     <section class="about-page-hero-section">
         <div class="about-page-hero-container">
             <div class="about-page-hero-content">
@@ -59,7 +61,8 @@
                 </div>
             </div>
             <div class="about-page-hero-image">
-                <img src="https://media.istockphoto.com/id/614439794/photo/mature-technician-installing-camera-on-wall-with-screwdriver.webp?a=1&b=1&s=612x612&w=0&k=20&c=ByMFJUL4NdV-ESO8zTazfJbEVJM0rWmZDcDnc3Q29OU=" alt="Hero Image">
+                <img src="../images/Me wiring.jpg"
+                    alt="Hero Image">
             </div>
         </div>
     </section>
@@ -69,7 +72,8 @@
         <h2>Meet Our CEO</h2>
         <div class="ceo-container">
             <div class="ceo-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv5T9G-B_94Liv4WQ2W-ulYpOqYM_0Yq6su6KgzQEzHU1InT6k-xEMNQvydTUrtqcPQio&usqp=CAU" alt="CEO of SwinSecurity">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv5T9G-B_94Liv4WQ2W-ulYpOqYM_0Yq6su6KgzQEzHU1InT6k-xEMNQvydTUrtqcPQio&usqp=CAU"
+                    alt="CEO of SwinSecurity">
             </div>
             <div class="ceo-info">
                 <h3>John Doe</h3>
@@ -88,18 +92,28 @@
         <div class="certificates-container">
             <div class="certificate-card">
                 <div class="cert-icon">🏅</div>
-                <h3>ISO 27001</h3>
-                <p>Certified for information security management, ensuring our systems meet global standards.</p>
+                <h3>COA License</h3>
+                <p>Security technician license.</p>
             </div>
             <div class="certificate-card">
                 <div class="cert-icon">⭐</div>
-                <h3>ONVIF Compliance</h3>
-                <p>Our products are fully compliant with ONVIF standards for seamless integration.</p>
+                <h3>Inner Range Integriti Installer</h3>
+                <p>Certified installer for Inner Range systems.</p>
             </div>
             <div class="certificate-card">
                 <div class="cert-icon">✅</div>
-                <h3>CE Certification</h3>
-                <p>Meets European safety, health, and environmental protection requirements.</p>
+                <h3>ICT Protoge GX Access Technician</h3>
+                <p>Certified for ICT Protoge GX systems.</p>
+            </div>
+            <div class="certificate-card">
+                <div class="cert-icon">🎖️</div>
+                <h3>Paradox MG/SP Alarm Installer</h3>
+                <p>Certified alarm installer for Paradox systems.</p>
+            </div>
+            <div class="certificate-card">
+                <div class="cert-icon">🛠️</div>
+                <h3>Bosch Alarm Installer</h3>
+                <p>Certified Bosch alarm system installer.</p>
             </div>
         </div>
     </section>
@@ -159,7 +173,7 @@
             </div>
         </div>
     </footer>
-        <script src="../js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
