--- a/pages/alarmsystem.html
+++ b/pages/alarmsystem.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Surveillance - SwinSecurity</title>
+    <title>About Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,35 +37,64 @@
 
         <i class="fas fa-bars hamburger"></i>
     </nav>
-
-    <section class="aisurveillance-page">
-        <div class="aisurveillance-hero">
-            <i class="fas fa-camera"></i>
-            <h1>AI Surveillance</h1>
-            <p>Harness the power of artificial intelligence to enhance security with real-time monitoring and
-                intelligent threat detection.</p>
-        </div>
-        <div class="aisurveillance-features">
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s=" alt="AI Camera">
-                <h3>Smart Cameras</h3>
-                <p>Advanced cameras with facial recognition and motion tracking for precise monitoring.</p>
-                <a href="#learn-more">Learn More</a>
-            </div>
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k=" alt="AI Analytics">
-                <h3>Real-Time Analytics</h3>
-                <p>Instant data processing to detect anomalies and alert security teams.</p>
-                <a href="#learn-more">Learn More</a>
-            </div>
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s=" alt="Cloud Integration">
-                <h3>Cloud Integration</h3>
-                <p>Seamless cloud storage for secure, accessible footage anytime, anywhere.</p>
-                <a href="#learn-more">Learn More</a>
-            </div>
+    <!-- Existing Hero Section -->
+    <section class="alarmsystem-page-hero">
+        <div class="alarmsystem-page-hero-text">
+            <h1>Secure Your Future with Top Alarm Systems</h1>
+            <p>
+                Safeguard your home or business with our premium alarm systems from trusted brands like DSC, Paradox,
+                Arrowhead, Bosch, Ajax, and Risco. Engineered for ultimate protection, these state-of-the-art solutions
+                provide 24/7 monitoring, seamless smart home integration, and unmatched reliability. Secure your future
+                with cutting-edge technology designed to keep you safe.
+            </p>
         </div>
     </section>
+
+    <!-- New Section with Trusted Alarm System Brands Heading -->
+    <h2 class="alarmsystem-page-trusted-brands-heading">Trusted Alarm System Brands</h2>
+<section class="alarmsystem-page-info">
+    <div class="alarmsystem-page-info-item">
+        <div class="alarmsystem-page-info-text">
+            <h2>Ajax Alarm Systems</h2>
+            <p>Ajax offers cutting-edge wireless alarm systems with sleek designs and powerful features. It includes real-time mobile app notifications, motion detectors, and door sensors, making it ideal for modern residential and commercial spaces.</p>
+        </div>
+        <div class="alarmsystem-page-info-image">
+            <img src="../images/AJAX alarm.jpg" alt="Ajax Alarm System">
+        </div>
+    </div>
+
+    <div class="alarmsystem-page-info-item">
+        <div class="alarmsystem-page-info-text">
+            <h2>DSC Alarm Systems</h2>
+            <p>DSC (Digital Security Controls) is known for reliable, scalable wired and wireless security systems. Perfect for homes and offices, DSC panels are compatible with automation and monitoring platforms for complete protection.</p>
+        </div>
+        <div class="alarmsystem-page-info-image">
+            <img src="../images/DSC alarm.jpg" alt="DSC Alarm System">
+        </div>
+    </div>
+
+    <div class="alarmsystem-page-info-item">
+        <div class="alarmsystem-page-info-text">
+            <h2>Paradox Alarm Systems</h2>
+            <p>Paradox offers flexible alarm solutions with hybrid wired/wireless options. Their MG and SP series are suitable for both residential and commercial installations, with mobile app integration and customizable expansion modules.</p>
+        </div>
+        <div class="alarmsystem-page-info-image">
+            <img src="../images/PARADOX ALarm.jpg" alt="Paradox Alarm System">
+        </div>
+    </div>
+
+    <div class="alarmsystem-page-info-item">
+        <div class="alarmsystem-page-info-text">
+            <h2>Bosch & Risco Alarm Systems</h2>
+            <p>Bosch 2000/3000 series and Risco systems are trusted in high-security environments. These solutions support advanced automation, remote monitoring, and robust alarm management—ideal for commercial sites and large-scale facilities.</p>
+        </div>
+        <div class="alarmsystem-page-info-image">
+            <img src="../images/RISCO alarm.jpg" alt="Bosch Risco Alarm System">
+        </div>
+    </div>
+</section>
+
+
     <footer class="footer-section">
         <div class="footer-container">
             <!-- Company Info -->
@@ -87,7 +116,6 @@
                     <li><a href="../pages/contact.html">Contact Us</a></li>
                 </ul>
             </div>
-            <!-- Social Media -->
             <!-- Social Media -->
             <div class="footer-column">
                 <h3>Follow Us</h3>
