--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,17 +20,18 @@
 
         <ul class="nav-links">
             <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="./about.html"><i class="fas fa-info-circle"></i> About</a></li>
+            <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-shield-alt"></i> Services <i
+                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
                         class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="./aisurveillance.html"><i class="fas fa-camera"></i> AI Surveillance</a></li>
-                    <!-- <li><a href="/pages/cybersecurity.html"><i class="fas fa-lock"></i> Cyber Security</a></li> -->
-                    <li><a href="./smarthome.html"><i class="fas fa-home"></i> Smart Home</a></li>
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                    <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
+                    <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
+                    <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
+                    <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
                 </ul>
             </li>
-            <!-- <li><a href="#"><i class="fas fa-images"></i> Gallery</a></li> -->
             <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
 
