--- a/pages/accesscontrol.html
+++ b/pages/accesscontrol.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Surveillance - SwinSecurity</title>
+    <title>Access Control</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -38,30 +38,38 @@
         <i class="fas fa-bars hamburger"></i>
     </nav>
 
-    <section class="aisurveillance-page">
-        <div class="aisurveillance-hero">
-            <i class="fas fa-camera"></i>
-            <h1>AI Surveillance</h1>
-            <p>Harness the power of artificial intelligence to enhance security with real-time monitoring and
-                intelligent threat detection.</p>
+
+
+    <section class="access-control-page">
+        <div class="access-control-hero">
+            <i class="fas fa-lock"></i> 
+            <h1>Top Access Control Systems</h1>
+            <p>We provide the latest and most secure access control systems to meet your security needs. Partnering with
+                trusted brands to deliver scalable and reliable solutions.</p>
         </div>
-        <div class="aisurveillance-features">
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s=" alt="AI Camera">
-                <h3>Smart Cameras</h3>
-                <p>Advanced cameras with facial recognition and motion tracking for precise monitoring.</p>
+        <div class="access-control-features">
+            <div class="access-control-feature-card">
+                <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s="
+                    alt="AI Camera">
+                <h3>Advanced Security</h3>
+                <p>Our access control systems offer the latest in security technology, protecting your assets with
+                    robust encryption and reliable authentication methods.</p>
                 <a href="#learn-more">Learn More</a>
             </div>
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k=" alt="AI Analytics">
-                <h3>Real-Time Analytics</h3>
-                <p>Instant data processing to detect anomalies and alert security teams.</p>
+            <div class="access-control-feature-card">
+                <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k="
+                    alt="AI Analytics">
+                <h3>Easy Integration</h3>
+                <p>Seamlessly integrate with your existing infrastructure, ensuring that your access control system fits
+                    perfectly within your security setup.</p>
                 <a href="#learn-more">Learn More</a>
             </div>
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s=" alt="Cloud Integration">
-                <h3>Cloud Integration</h3>
-                <p>Seamless cloud storage for secure, accessible footage anytime, anywhere.</p>
+            <div class="access-control-feature-card">
+                <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s="
+                    alt="Cloud Integration">
+                <h3>Remote Access</h3>
+                <p>Control and monitor your access control systems remotely, providing you with flexibility and control
+                    from anywhere in the world.</p>
                 <a href="#learn-more">Learn More</a>
             </div>
         </div>
