changed js file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="./pages/smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
                     </ul>
                 </li>
-                <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="./pages/contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
 
             <i class="fas fa-bars hamburger"></i>
